Update README.md
README - VM arguments