@@ -1,1 +1,6 @@
 # web_crawler
+
+Za pokretanje moze biti potrebno dodati u run config
+VM arguments:
+
+--add-exports java.management/sun.management=ALL-UNNAMED
